--- a/index.html
+++ b/index.html
@@ -3,13 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Bienvenue - Examen en ligne</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #e0e7ff 0%, #fff 100%);
+            min-height: 100vh;
+        }
+        .welcome-card {
+            max-width: 450px;
+            margin: 60px auto;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+            border-radius: 18px;
+            background: rgba(255,255,255,0.95);
+            padding: 2.5rem 2rem 2rem 2rem;
+            transition: box-shadow 0.3s;
+        }
+        .welcome-card:hover {
+            box-shadow: 0 12px 40px 0 rgba(31, 38, 135, 0.22);
+        }
+        h1 {
+            color: #3b82f6;
+            font-weight: 700;
+        }
+        .btn-primary {
+            background: linear-gradient(90deg, #3b82f6 60%, #6366f1 100%);
+            border: none;
+            font-size: 1.2rem;
+            padding: 0.75rem 2.5rem;
+            border-radius: 30px;
+            transition: background 0.2s;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(90deg, #6366f1 60%, #3b82f6 100%);
+        }
+        @media (max-width: 576px) {
+            .welcome-card {
+                margin: 30px 10px;
+                padding: 1.5rem 0.5rem 1.5rem 0.5rem;
+            }
+            h1 {
+                font-size: 1.4rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5 text-center">
+    <div class="welcome-card text-center">
         <h1>Bienvenue sur la plateforme d'examen en ligne</h1>
-        <p>Prêt à tester vos connaissances ? Cliquez ci-dessous pour commencer l'examen.</p>
-        <a href="register.html" class="btn btn-primary btn-lg">Commencer</a>
+        <p class="mt-3 mb-4">Prêt à tester vos connaissances ? <br> Cliquez ci-dessous pour commencer l'examen.</p>
+        <a href="register.html" class="btn btn-primary btn-lg shadow">Commencer</a>
     </div>
 </body>
 </html>
