--- a/exam.html
+++ b/exam.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Examen - Questions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="exam.js"></script>
