--- a/rules.html
+++ b/rules.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Règles - Examen en ligne</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
 </head>
 <body>
