--- a/rules.html
+++ b/rules.html
@@ -5,17 +5,68 @@
     <title>Règles - Examen en ligne</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #e0e7ff 0%, #fff 100%);
+            min-height: 100vh;
+        }
+        .rules-card {
+            max-width: 500px;
+            margin: 60px auto;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+            border-radius: 18px;
+            background: rgba(255,255,255,0.95);
+            padding: 2.5rem 2rem 2rem 2rem;
+            transition: box-shadow 0.3s;
+        }
+        .rules-card:hover {
+            box-shadow: 0 12px 40px 0 rgba(31, 38, 135, 0.22);
+        }
+        h2 {
+            color: #3b82f6;
+            font-weight: 700;
+        }
+        .btn-primary {
+            background: linear-gradient(90deg, #3b82f6 60%, #6366f1 100%);
+            border: none;
+            font-size: 1.1rem;
+            padding: 0.6rem 2rem;
+            border-radius: 30px;
+            transition: background 0.2s;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(90deg, #6366f1 60%, #3b82f6 100%);
+        }
+        ul {
+            text-align: left;
+            padding-left: 1.2rem;
+        }
+        ul li {
+            margin-bottom: 0.6rem;
+        }
+        @media (max-width: 576px) {
+            .rules-card {
+                margin: 30px 10px;
+                padding: 1.5rem 0.5rem 1.5rem 0.5rem;
+            }
+            h2 {
+                font-size: 1.3rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="rules-card text-center">
         <h2>Règles de l'examen</h2>
-        <ul>
-            <li>Chaque question a un minuteur.</li>
-            <li>Vous ne pouvez pas revenir en arrière.</li>
+        <ul class="mt-3 mb-4">
+            <li>L'examen est accessible uniquement via le lien d'invitation fourni.</li>
+            <li>Chaque question est chronometrée; quand le temps est écoulé, la suivante s'affiche automatiquement.</li>
+            <li>Les questions apparaissent une par une et vous ne pouvez pas revenir en arrière.</li>
+            <li>Ne rafraichissez pas la page sous peine de perdre vos réponses. </li>
             <li>Vous pouvez passer une question si vous ne connaissez pas la réponse.</li>
             <li>À la fin, vos réponses seront envoyées automatiquement.</li>
         </ul>
-        <button class="btn btn-primary" onclick="window.location.href='exam.html'">Je suis prêt(e)</button>
+        <button class="btn btn-primary shadow" onclick="window.location.href='exam.html'">Je suis prêt(e)</button>
     </div>
 </body>
 </html>
